--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@
                 <p class="nav-heading">Sorting visualizer</p>
 
                 <div class="algos">
-                    <!-- <button >Bubble</button> -->
-                    <!-- <button >Selection</button> -->
-                    <button >Insertion</button>
+                    <button >Bubble</button>
                     <button >Merge</button>
-                    <!-- <button >Quick</button> -->
-                    <!-- <button style="margin-right: 0px;">Heap</button> -->
                 </div>
             </div>
 
@@ -88,15 +84,10 @@
 
     </footer>
 
-    <script src="./scripts/main.js"></script>   <!--This should be at the end of body and should be loaded before sorts.js-->
-    <script src="./scripts/visualizations.js"></script>  <!--This should be loaded after main.js-->
+    <script src="./scripts/main.js"></script>   
+    <script src="./scripts/visualizations.js"></script>  
 
-    <!-- <script src="./scripts/bubble_sort.js"></script> -->
-    <!-- <script src="./scripts/selection_sort.js"></script> -->
-    <script src="./scripts/insertion_sort.js"></script>
+    <script src="./scripts/bubble_sort.js"></script>
     <script src="./scripts/merge_sort.js"></script>
-    <!-- <script src="./scripts/quick_sort.js"></script> -->
-    <!-- <script src="./scripts/heap_sort.js"></script> -->
 </body>
-
 </html>
